# argocd-test

./: Dockerfile  build.sh  deployment.yaml
app/: Dockerfile  setup.cfg
app/src/argo_test/: main.py
k8s/: deployment.yaml  service.yaml
k8s/base/: deployment.yaml
k8s/overlays/prod/: kustomization.yaml  patch-deployment.yaml
