[metadata]
name = argo-test
version = file: VERSION
author = Michael Ehrenreich
author_email = michael.ehrenreich@ottogroup.com
url = https://source.ogit.io/sih-public/sih-api-2
description = API gateway for SIH Data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sih
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = file: requirements.txt
python_requires = >=3.10.8

[options.package_data]
* = README.md, LICENSE, VERSION

[options.packages.find]
where = src
